--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "pretty": true,
         "sourceMap": true,
         "target": "es6",
-        "module": "CommonJS",
+        "module": "ESNext",
         "jsx": "preserve",
         "jsxFactory": "h",
         "moduleResolution": "node",
@@ -28,6 +28,7 @@
             "ES2020",
             "scripthost",
             "DOM",
+            "WebWorker"
         ],
     },
     "include": [
