Finally freaking testing works. Workspaces too.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
         "lib": [
             "ES2020",
             "scripthost",
-            "DOM",
-            "WebWorker"
+            "DOM"
         ],
     },
     "include": [
