--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "pretty": true,
         "sourceMap": true,
         "target": "es6",
-        "module": "ESNext",
+        "module": "CommonJS",
         "jsx": "preserve",
         "jsxFactory": "h",
         "moduleResolution": "node",
@@ -31,12 +31,12 @@
         ],
     },
     "include": [
-        "src",
-        "test",
-        "rollup.config.ts"
+        "src"
     ],
     "exclude": [
         "node_modules",
+        "test",
+        "rollup.config.ts",
         "dist"
     ]
 }
