--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "watch": "rollup --config rollup.config.ts --configPlugin typescript --watch",
         "dts": "tsc -p ./tsconfig.build.json --emitDeclarationOnly  --declaration --declarationDir dist ",
         "fixtures:streams": "ts-node test/_support/move-fixtures.ts",
-        "test": "cd test && mocha"
+        "test": "mocha"
     },
     "dependencies": {
         "camelcase": "^6.2.0",
@@ -33,6 +33,8 @@
         "dot-object": "^2.1.4",
         "@types/dot-object": "^2.1.2",
         "lodash": "^4.17.21",
+        "@types/fs-extra": "^9.0.13",
+        "fs-extra": "^10.0.0",
         "@types/lodash": "^4.14.177",
         "@radic/console-input": "^1.10.0",
         "@radic/core": "^1.0.5"
