--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "@laravel-streams/streams-api",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "publishConfig": {
         "access": "public"
     },
-    "types": "dist/index.d.ts",
+    "types": "types/index.d.ts",
     "main": "dist/streams-api.cjs.js",
     "module": "dist/streams-api.esm-bundler.js",
     "scripts": {
