--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,7 @@
         "pretty": true,
         "sourceMap": false,
         "target": "es6",
-        "module": "ESNext",
+        "module": "esnext",
         "jsx": "preserve",
         "jsxFactory": "h",
         "moduleResolution": "node",
