--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "main": "dist/streams-api.cjs.js",
     "module": "dist/streams-api.esm-bundler.js",
     "scripts": {
-        "build": "npm-run-all clean test bundle dts doc:analyze doc:api",
+        "build": "npm-run-all clean test bundle dts cli:analyze doc:api cli:docs",
         "clean": "npm-run-all clean:dist clean:doc:api",
         "clean:dist": "rm -rf ./dist ./types",
         "clean:doc:api": "rm -rf ./docs/api",
         "clean:src": "rimraf src/**/*.{js,js.map}",
-        "doc:analyze": "ts-node ./scripts/analyze.ts --renderJson --renderMarkdown",
+        "cli:analyze": "ts-node ./scripts/cli.ts analyze",
+        "cli:docs": "ts-node ./scripts/cli.ts docs",
         "doc:api": "typedoc --options ./typedoc.js",
         "doc:api:md": "STREAMS_API_MD_DOCS=true typedoc --options ./typedoc.js",
         "bundle": "rollup --config rollup.config.ts --configPlugin typescript",
@@ -35,6 +36,13 @@
     },
     "devDependencies": {
         "axios": "^0.24.0",
+        "yargs": "^17.3.1",
+        "@types/yargs": "^17.0.8",
+        "markdown-it": "^12.3.0",
+        "highlight.js": "^11.3.1",
+        "@types/highlight.js": "^10.1.0",
+        "@types/markdown-it": "^12.2.3",
+        "@gerhobbelt/markdown-it-attrs": "^4.1.0-24",
         "qs": "^6.10.2",
         "@radic/console-input": "^1.10.0",
         "@radic/core": "^1.0.5",
