--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "yargs": "^17.3.1",
         "@types/yargs": "^17.0.8",
         "markdown-it": "^12.3.0",
+        "markdown-it-anchor": "^8.4.1",
+        "@sindresorhus/slugify": "^2.1.0",
         "highlight.js": "^11.3.1",
         "@types/highlight.js": "^10.1.0",
         "@types/markdown-it": "^12.2.3",
