--- a/package.json
+++ b/package.json
@@ -54,7 +54,100 @@
         "fs-extra": "^10.0.0",
         "jquery": "^3.6.0",
         "lodash": "^4.17.21",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.15.6",
+        "@radic/rmrf": "^1.0.3",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.1.1",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "rollup-plugin-polyfill-node": "^0.8.0",
+        "rollup-plugin-analyzer": "^4.0.0",
+        "rollup": "^2.58.0",
+        "rollup-plugin-dts": "^4.0.0",
+        "rollup-plugin-progress": "^1.1.2",
+        "rollup-plugin-size-snapshot": "^0.12.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-visualizer": "^5.5.2",
+        "@testdeck/mocha": "^0.1.2",
+        "@types/btoa": "^1.2.3",
+        "@types/chai": "^4.2.22",
+        "@types/debug": "^4.1.7",
+        "@types/faker": "^5.5.8",
+        "@types/glob": "^7.2.0",
+        "@types/grunt": "^0.4.27",
+        "@types/inquirer": "^8.1.3",
+        "@types/jsdom": "^16.2.13",
+        "@types/lz-string": "^1.3.34",
+        "@types/mocha": "^9.0.0",
+        "@types/node": "^16.10.1",
+        "@types/qs": "^6.9.7",
+        "@types/should": "^13.0.0",
+        "@types/should-sinon": "^0.0.8",
+        "@types/sinon": "^10.0.4",
+        "@types/sinon-chai": "^3.2.5",
+        "@types/superagent": "^4.1.13",
+        "@types/yargs-parser": "^20.2.1",
+        "alpinejs": "^2.7.3",
+        "anchor-js": "^4.3.0",
+        "btoa": "^1.2.1",
+        "chai": "^4.3.4",
+        "chai-http": "^4.3.0",
+        "clipboard": "^2.0.6",
+        "concurrently": "^6.3.0",
+        "cross-env": "^7.0",
+        "dotenv": "^10.0.0",
+        "faker": "^5.5.3",
+        "filesize": "^8.0.6",
+        "@types/filesize": "^5.0.0",
+        "np": "^7.5.0",
+        "glob": "^7.2.0",
+        "inquirer": "^8.2.0",
+        "jsdom": "^18.0.0",
+        "laravel-mix": "^6.0.9",
+        "lz-string": "^1.4.4",
+        "mocha": "^9.1.2",
+        "node-fetch": "^3.0.0",
+        "npm-run-all": "^4.1.5",
+        "nyc": "^15.1.0",
+        "postcss": "^8.1",
+        "pretender": "^3.4.7",
+        "prismjs": "^1.23.0",
+        "resolve-url-loader": "^3.1.2",
+        "rimraf": "^3.0.2",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.0",
+        "should": "^13.2.3",
+        "should-sinon": "^0.0.6",
+        "sinon": "^11.1.2",
+        "sinon-chai": "^3.7.0",
+        "source-map-support": "^0.5.20",
+        "tslib": "^2.3.1",
+        "ts-loader": "^8.0.13",
+        "ts-mocha": "^8.0.0",
+        "ts-node": "10.0.0",
+        "tsconfig-paths": "^3.11.0",
+        "source-map": "^0.7.3",
+        "terser": "^5.10.0",
+        "typedoc": "^0.22.10",
+        "typedoc-neo-theme": "^1.1.1",
+        "typedoc-plugin-custom-tags": "^1.0.2",
+        "typedoc-plugin-external-module-name": "^4.0.6",
+        "typedoc-plugin-extras": "^2.2.0",
+        "typedoc-plugin-inline-sources": "^1.0.0",
+        "typedoc-plugin-markdown": "^3.11.3",
+        "typedoc-plugin-merge-modules": "^3.0.2",
+        "typedoc-plugin-mermaid": "^1.4.0",
+        "typedoc-scalefast-theme": "^1.0.3",
+        "typedoc-plugin-pages": "^1.1.0",
+        "typedoc-theme-slick-dark": "^1.0.4",
+        "@types/lunr": "^2.3.4",
+        "typedoc-wrapper": "^6.0.0",
+        "typescript": "^4.4.4",
+        "webpack-cli": "^4.8.0",
+        "webpack-merge": "^5.8.0",
+        "whatwg-fetch": "^3.6.2"
     },
     "bugs": {
         "url": "https://github.com/laravel-streams/api-client/issues"
