--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@laravel-streams/api-client",
-    "version": "1.2.9",
+    "version": "1.3.0",
     "publishConfig": {
         "access": "public"
     },
@@ -15,6 +15,8 @@
         "clean:src": "rimraf src/**/*.{js,js.map}",
         "cli:analyze": "ts-node ./scripts/cli.ts analyze",
         "cli:docs": "ts-node ./scripts/cli.ts docs",
+        "cli:test": "ts-node ./scripts/test.ts",
+        "bundle:dts:publish": "npm-run-all bundle dts && npm publish",
         "doc:api": "typedoc --options ./typedoc.js",
         "bundle": "rollup --config rollup.config.ts --configPlugin typescript",
         "watch": "rollup --config rollup.config.ts --configPlugin typescript --watch",
@@ -29,8 +31,7 @@
         "lz-string": "^1.4.4"
     },
     "peerDependencies": {
-        "axios": "^0.24.0",
-        "qs": "^6.10.2"
+        "axios": "^0.24.0"
     },
     "devDependencies": {
         "axios": "^0.24.0",
