--- a/package.json
+++ b/package.json
@@ -4,73 +4,37 @@
     "publishConfig": {
         "access": "public"
     },
-    "types": "types/index.d.ts",
+    "source": "src/index.js",
     "main": "dist/index.js",
-    "module": "dist/index.js",
+    "module": "dist/module.js",
+    "legacy": "dist/legacy.js",
     "scripts": {
-        "build": "tsc -p tsconfig.build.json",
-        "watch": "tsc -p tsconfig.build.json --watch",
+        "dev": "parcel src/index.html",
+        "watch": "parcel watch",
+        "build": "parcel build",
         "clean": "rm -rf dist",
         "test": "mocha"
     },
-    "peerDependencies": {
-        "camelcase": "^6.2.0",
-        "collect.js": "^4.29.3",
-        "deepmerge": "^4.2.2",
-        "tapable": "^2.2.1",
-        "lz-string": "^1.4.4",
-        "axios": "^0.24.0"
-    },
+    "peerDependencies": {},
     "devDependencies": {
-        "camelcase": "^6.2.0",
-        "collect.js": "^4.29.3",
-        "deepmerge": "^4.2.2",
-        "tapable": "^2.2.1",
-        "axios": "^0.24.0",
-        "@types/lodash": "^4.14.177",
-        "@testdeck/mocha": "^0.1.2",
-        "@types/btoa": "^1.2.3",
-        "@types/chai": "^4.2.22",
-        "@types/debug": "^4.1.7",
-        "@types/faker": "^5.5.8",
-        "@types/glob": "^7.2.0",
-        "@types/jsdom": "^16.2.13",
-        "@types/lz-string": "^1.3.34",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^16.10.1",
-        "@types/should-sinon": "^0.0.8",
-        "@types/sinon": "^10.0.4",
-        "@types/sinon-chai": "^3.2.5",
-        "@types/superagent": "^4.1.13",
-        "@types/yargs-parser": "^20.2.1",
-        "btoa": "^1.2.1",
-        "chai": "^4.3.4",
-        "chai-http": "^4.3.0",
-        "concurrently": "^6.3.0",
-        "cross-env": "^7.0",
-        "dotenv": "^10.0.0",
-        "faker": "^5.5.3",
-        "filesize": "^8.0.6",
-        "@types/filesize": "^5.0.0",
-        "glob": "^7.2.0",
-        "jsdom": "^18.0.0",
-        "lz-string": "^1.4.4",
-        "mocha": "^9.1.2",
-        "nyc": "^15.1.0",
-        "pretender": "^3.4.7",
-        "resolve-url-loader": "^3.1.2",
-        "rimraf": "^3.0.2",
-        "should": "^13.2.3",
-        "should-sinon": "^0.0.6",
-        "sinon": "^11.1.2",
-        "sinon-chai": "^3.7.0",
-        "source-map-support": "^0.5.20",
-        "tslib": "^2.3.1",
-        "ts-mocha": "^8.0.0",
-        "ts-node": "10.0.0",
-        "tsconfig-paths": "^3.11.0",
-        "source-map": "^0.7.3",
-        "typescript": "^4.4.4"
+        "npx": "^10.2.2",
+        "parcel": "^2.8.0"
+    },
+    "targets": {
+        "default": {
+            "isLibrary": true,
+            "outputFormat": "esmodule",
+            "engines": {
+                "browsers": "Chrome 80"
+            }
+        },
+        "legacy": {
+            "isLibrary": true,
+            "outputFormat": "commonjs",
+            "engines": {
+                "browsers": "> 0.5%, last 2 versions, not dead"
+            }
+        }
     },
     "bugs": {
         "url": "https://github.com/laravel-streams/api-client/issues"
