--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/lz-string": "^1.3.34",
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.10.1",
+        "@types/qs": "^6.9.7",
         "@types/should-sinon": "^0.0.8",
         "@types/sinon": "^10.0.4",
         "@types/sinon-chai": "^3.2.5",
@@ -53,6 +54,7 @@
         "parcel": "^2.8.0",
         "parcel-bundler": "^1.12.5",
         "pretender": "^3.4.7",
+        "qs": "^6.11.0",
         "reflect-metadata": "^0.1.13",
         "resolve-url-loader": "^3.1.2",
         "rimraf": "^3.0.2",
@@ -66,7 +68,8 @@
         "ts-node": "10.0.0",
         "tsconfig-paths": "^3.11.0",
         "tslib": "^2.3.1",
-        "typescript": "^4.9.3"
+        "typescript": "^4.9.3",
+        "whatwg-fetch": "^3.6.2"
     },
     "targets": {
         "default": {
