--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
     "publishConfig": {
         "access": "public"
     },
-    "source": "src/index.js",
-    "main": "dist/index.js",
+    "source": "src/index.html",
+    "main": "dist/commonjs.js",
     "module": "dist/module.js",
     "legacy": "dist/legacy.js",
     "scripts": {
         "dev": "parcel src/index.html",
         "watch": "parcel watch",
-        "build": "parcel build",
-        "clean": "rm -rf dist",
+        "build": "parcel build src/index.html",
+        "clean": "rm -rf dist yarn.lock node_modules",
         "test": "mocha"
     },
     "peerDependencies": {},
@@ -20,13 +20,7 @@
         "@testdeck/mocha": "^0.1.2",
         "@types/btoa": "^1.2.3",
         "@types/chai": "^4.2.22",
-        "@types/debug": "^4.1.7",
-        "@types/faker": "^5.5.8",
-        "@types/filesize": "^5.0.0",
-        "@types/glob": "^7.2.0",
         "@types/jsdom": "^16.2.13",
-        "@types/lodash": "^4.14.177",
-        "@types/lz-string": "^1.3.34",
         "@types/mocha": "^9.0.0",
         "@types/node": "^16.10.1",
         "@types/qs": "^6.9.7",
@@ -34,58 +28,26 @@
         "@types/sinon": "^10.0.4",
         "@types/sinon-chai": "^3.2.5",
         "@types/superagent": "^4.1.13",
-        "@types/yargs-parser": "^20.2.1",
         "btoa": "^1.2.1",
         "chai": "^4.3.4",
         "chai-http": "^4.3.0",
-        "concurrently": "^6.3.0",
-        "cross-env": "^7.0",
         "dotenv": "^10.0.0",
-        "faker": "^5.5.3",
-        "filesize": "^8.0.6",
-        "fs-extra": "^11.1.0",
-        "glob": "^7.2.0",
         "jsdom": "^18.0.0",
-        "lz-string": "^1.4.4",
         "mocha": "^9.1.2",
-        "node-fetch": "^3.3.0",
-        "npx": "^10.2.2",
         "nyc": "^15.1.0",
         "parcel": "^2.8.0",
         "parcel-bundler": "^1.12.5",
-        "pretender": "^3.4.7",
         "qs": "^6.11.0",
-        "reflect-metadata": "^0.1.13",
-        "resolve-url-loader": "^3.1.2",
-        "rimraf": "^3.0.2",
         "should": "^13.2.3",
         "should-sinon": "^0.0.6",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
         "source-map": "^0.7.3",
         "source-map-support": "^0.5.20",
-        "ts-mocha": "^8.0.0",
         "ts-node": "10.0.0",
-        "tsconfig-paths": "^3.11.0",
         "tslib": "^2.3.1",
         "typescript": "^4.9.3",
         "whatwg-fetch": "^3.6.2"
-    },
-    "targets": {
-        "default": {
-            "isLibrary": true,
-            "outputFormat": "esmodule",
-            "engines": {
-                "browsers": "Chrome 80"
-            }
-        },
-        "legacy": {
-            "isLibrary": true,
-            "outputFormat": "commonjs",
-            "engines": {
-                "browsers": "> 0.5%, last 2 versions, not dead"
-            }
-        }
     },
     "bugs": {
         "url": "https://github.com/laravel-streams/api-client/issues"
