--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         }
     },
     "scripts": {
-        "dev": "parcel src/index.html",
+        "dev": "python3 -m http.server 8080",
+        "dev:parcel": "parcel playground.html --open",
         "watch": "parcel watch",
         "build": "parcel build",
         "clean": "rm -rf dist .parcel-cache",
